0.3/_sources/generated/strategy_overview.rst.txt
#################
Strategy Overview
#################

This is an overview of all implemented active learning strategies.

You can use the following checkboxes to filter the tables below.

.. raw:: html

   <input type="checkbox" class="input-tag" value="regression">
   <label>Regression</label>
   <input type="checkbox" class="input-tag" value="classification">
    <label>Classification</label>
   <input type="checkbox" class="input-tag" value="multi-annotator">
    <label>Multi-Annotator</label>
   <input type="checkbox" class="input-tag" value="single-annotator">
    <label>Single-Annotator</label>

Pool
----

Expected Error Reduction
~~~~~~~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Expected Model Output Change </generated/sphinx_gallery_examples/pool/plot-ExpectedModelOutputChange-Expected_Model_Output_Change>`
     - :doc:`ExpectedModelOutputChange </generated/api/skactiveml.pool.ExpectedModelOutputChange>`
     - pool regression single-annotator
     - :footcite:t:`kading2018active`
   * - :doc:`Expected Model Variance Reduction </generated/sphinx_gallery_examples/pool/plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction>`
     - :doc:`ExpectedModelVarianceReduction </generated/api/skactiveml.pool.ExpectedModelVarianceReduction>`
     - pool regression single-annotator
     - :footcite:t:`cohn1996active`
   * - :doc:`Regression based Kullback Leibler Divergence Maximization </generated/sphinx_gallery_examples/pool/plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization>`
     - :doc:`KLDivergenceMaximization </generated/api/skactiveml.pool.KLDivergenceMaximization>`
     - pool regression single-annotator
     - :footcite:t:`elreedy2019novel`
   * - :doc:`Monte-Carlo EER with Log-Loss </generated/sphinx_gallery_examples/pool/plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss>`
     - :doc:`MonteCarloEER </generated/api/skactiveml.pool.MonteCarloEER>`
     - pool classification single-annotator
     - :footcite:t:`roy2001toward`
   * - :doc:`Monte-Carlo EER with Misclassification-Loss </generated/sphinx_gallery_examples/pool/plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss>`
     - :doc:`MonteCarloEER </generated/api/skactiveml.pool.MonteCarloEER>`
     - pool classification single-annotator
     - :footcite:t:`roy2001toward`
   * - :doc:`Value of Information on Unlabeled Samples </generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples>`
     - :doc:`ValueOfInformationEER </generated/api/skactiveml.pool.ValueOfInformationEER>`
     - pool classification single-annotator
     - :footcite:t:`joshi2009multi`
   * - :doc:`Value of Information on Labeled Samples </generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples>`
     - :doc:`ValueOfInformationEER </generated/api/skactiveml.pool.ValueOfInformationEER>`
     - pool classification single-annotator
     - :footcite:t:`margineantu2005active`
   * - :doc:`Value of Information (VOI) </generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_(VOI)>`
     - :doc:`ValueOfInformationEER </generated/api/skactiveml.pool.ValueOfInformationEER>`
     - pool classification single-annotator
     - :footcite:t:`kapoor2007selective`

Model Change
~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Expected Model Change </generated/sphinx_gallery_examples/pool/plot-ExpectedModelChangeMaximization-Expected_Model_Change>`
     - :doc:`ExpectedModelChangeMaximization </generated/api/skactiveml.pool.ExpectedModelChangeMaximization>`
     - pool regression single-annotator
     - :footcite:t:`cai2013maximizing`

Query-by-Committee
~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Query-by-Committee with Kullback-Leibler Divergence </generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_with_Kullback-Leibler_Divergence>`
     - :doc:`QueryByCommittee </generated/api/skactiveml.pool.QueryByCommittee>`
     - pool classification single-annotator
     - :footcite:t:`seung1992query`, :footcite:t:`mccallum1998employing`

Random Sampling
~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Random Sampling </generated/sphinx_gallery_examples/pool/plot-RandomSampling-Random_Sampling>`
     - :doc:`RandomSampling </generated/api/skactiveml.pool.RandomSampling>`
     - pool regression classification single-annotator
     - 

Uncertainty Sampling
~~~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Epistemic Uncertainty Sampling </generated/sphinx_gallery_examples/pool/plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling>`
     - :doc:`EpistemicUncertaintySampling </generated/api/skactiveml.pool.EpistemicUncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`nguyen2019epistemic`
   * - :doc:`Density-Diversity-Distribution-Distance Sampling (4DS) </generated/sphinx_gallery_examples/pool/plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS)>`
     - :doc:`FourDs </generated/api/skactiveml.pool.FourDs>`
     - pool classification single-annotator
     - :footcite:t:`reitmaier2013let`
   * - :doc:`Uncertainty Sampling with Margin </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Margin>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`settles2009active`
   * - :doc:`Uncertainty Sampling with Least-Confidence </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`settles2009active`
   * - :doc:`Uncertainty Sampling with Entropy </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`settles2009active`
   * - :doc:`Expected Average Precision </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Expected_Average_Precision>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`wang2018uncertainty`

Others
~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Active Learning with Cost Embedding (ALCE) </generated/sphinx_gallery_examples/pool/plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE)>`
     - :doc:`CostEmbeddingAL </generated/api/skactiveml.pool.CostEmbeddingAL>`
     - pool classification single-annotator
     - :footcite:t:`huang2016novel`
   * - :doc:`Discriminative Active Learning (DAL) </generated/sphinx_gallery_examples/pool/plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL)>`
     - :doc:`DiscriminativeAL </generated/api/skactiveml.pool.DiscriminativeAL>`
     - pool classification regression single-annotator
     - :footcite:t:`gissin2019discriminative`
   * - :doc:`Greedy Sampling on the Target Space (GSy) </generated/sphinx_gallery_examples/pool/plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy)>`
     - :doc:`GreedySamplingTarget </generated/api/skactiveml.pool.GreedySamplingTarget>`
     - pool regression single-annotator
     - :footcite:t:`wu2019active`
   * - :doc:`Improved Greedy Sampling (GSi) </generated/sphinx_gallery_examples/pool/plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi)>`
     - :doc:`GreedySamplingTarget </generated/api/skactiveml.pool.GreedySamplingTarget>`
     - pool regression single-annotator
     - :footcite:t:`wu2019active`
   * - :doc:`Greedy Sampling on the Feature Space (GSx) </generated/sphinx_gallery_examples/pool/plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx)>`
     - :doc:`GreedySamplingX </generated/api/skactiveml.pool.GreedySamplingX>`
     - pool regression single-annotator
     - :footcite:t:`wu2019active`
   * - :doc:`Multi-class Probabilistic Active Learning (McPAL) </generated/sphinx_gallery_examples/pool/plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL)>`
     - :doc:`ProbabilisticAL </generated/api/skactiveml.pool.ProbabilisticAL>`
     - pool classification single-annotator
     - :footcite:t:`kottke2016multi`
   * - :doc:`Query-by-Committee with Vote Entropy </generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_with_Vote_Entropy>`
     - :doc:`QueryByCommittee </generated/api/skactiveml.pool.QueryByCommittee>`
     - pool classification single-annotator
     - :footcite:t:`seung1992query`, :footcite:t:`engelson1996minimizing`
   * - :doc:`Querying Informative and Representative Examples (QUIRE) </generated/sphinx_gallery_examples/pool/plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE)>`
     - :doc:`Quire </generated/api/skactiveml.pool.Quire>`
     - pool classification single-annotator
     - :footcite:t:`huang2010active`


References
----------
.. footbibliography::
