0.5/_sources/generated/strategy_overview.rst.txt
#################
Strategy Overview
#################

This is an overview of all implemented active learning strategies.

You can use the following checkboxes to filter the tables below.

.. raw:: html

   <input type="checkbox" class="input-tag" value="regression">
   <label>Regression</label>
   <input type="checkbox" class="input-tag" value="classification">
    <label>Classification</label>
   <input type="checkbox" class="input-tag" value="multi-annotator">
    <label>Multi-Annotator</label>
   <input type="checkbox" class="input-tag" value="single-annotator">
    <label>Single-Annotator</label>





Pool
----

Expected Error Reduction
~~~~~~~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Expected Model Output Change </generated/sphinx_gallery_examples/pool/plot-ExpectedModelOutputChange-Expected_Model_Output_Change>`
     - :doc:`ExpectedModelOutputChange </generated/api/skactiveml.pool.ExpectedModelOutputChange>`
     - pool regression single-annotator
     - :footcite:t:`kading2018active`
   * - :doc:`Expected Model Variance Reduction </generated/sphinx_gallery_examples/pool/plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction>`
     - :doc:`ExpectedModelVarianceReduction </generated/api/skactiveml.pool.ExpectedModelVarianceReduction>`
     - pool regression single-annotator
     - :footcite:t:`cohn1996active`
   * - :doc:`Regression based Kullback Leibler Divergence Maximization </generated/sphinx_gallery_examples/pool/plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization>`
     - :doc:`KLDivergenceMaximization </generated/api/skactiveml.pool.KLDivergenceMaximization>`
     - pool regression single-annotator
     - :footcite:t:`elreedy2019novel`
   * - :doc:`Monte-Carlo EER with Log-Loss </generated/sphinx_gallery_examples/pool/plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss>`
     - :doc:`MonteCarloEER </generated/api/skactiveml.pool.MonteCarloEER>`
     - pool classification single-annotator
     - :footcite:t:`roy2001toward`
   * - :doc:`Monte-Carlo EER with Misclassification-Loss </generated/sphinx_gallery_examples/pool/plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss>`
     - :doc:`MonteCarloEER </generated/api/skactiveml.pool.MonteCarloEER>`
     - pool classification single-annotator
     - :footcite:t:`roy2001toward`
   * - :doc:`Value of Information on Unlabeled Samples </generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples>`
     - :doc:`ValueOfInformationEER </generated/api/skactiveml.pool.ValueOfInformationEER>`
     - pool classification single-annotator
     - :footcite:t:`joshi2009multi`
   * - :doc:`Value of Information on Labeled Samples </generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples>`
     - :doc:`ValueOfInformationEER </generated/api/skactiveml.pool.ValueOfInformationEER>`
     - pool classification single-annotator
     - :footcite:t:`margineantu2005active`
   * - :doc:`Value of Information (VOI) </generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_(VOI)>`
     - :doc:`ValueOfInformationEER </generated/api/skactiveml.pool.ValueOfInformationEER>`
     - pool classification single-annotator
     - :footcite:t:`kapoor2007selective`

Meta
~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Parallel Utility Estimation Wrapper </generated/sphinx_gallery_examples/pool/plot-ParallelUtilityEstimationWrapper-Parallel_Utility_Estimation_Wrapper>`
     - :doc:`ParallelUtilityEstimationWrapper </generated/api/skactiveml.pool.ParallelUtilityEstimationWrapper>`
     - pool regression classification single-annotator
     - 
   * - :doc:`Sub-sampling Wrapper </generated/sphinx_gallery_examples/pool/plot-SubSamplingWrapper-Sub-sampling_Wrapper>`
     - :doc:`SubSamplingWrapper </generated/api/skactiveml.pool.SubSamplingWrapper>`
     - pool regression classification single-annotator
     - 

Model Change
~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Expected Model Change </generated/sphinx_gallery_examples/pool/plot-ExpectedModelChangeMaximization-Expected_Model_Change>`
     - :doc:`ExpectedModelChangeMaximization </generated/api/skactiveml.pool.ExpectedModelChangeMaximization>`
     - pool regression single-annotator
     - :footcite:t:`cai2013maximizing`

Query-by-Committee
~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Batch Bayesian Active Learning by Disagreement (BatchBALD) </generated/sphinx_gallery_examples/pool/plot-BatchBALD-Batch_Bayesian_Active_Learning_by_Disagreement_(BatchBALD)>`
     - :doc:`BatchBALD </generated/api/skactiveml.pool.BatchBALD>`
     - pool classification single-annotator
     - :footcite:t:`houlsby2011bayesian`, :footcite:t:`kirsch2019batchbald`
   * - :doc:`Bayesian Active Learning by Disagreement (BALD) </generated/sphinx_gallery_examples/pool/plot-GreedyBALD-Bayesian_Active_Learning_by_Disagreement_(BALD)>`
     - :doc:`GreedyBALD </generated/api/skactiveml.pool.GreedyBALD>`
     - pool classification single-annotator
     - :footcite:t:`houlsby2011bayesian`
   * - :doc:`Query-by-Committee (QBC) with Kullback-Leibler Divergence </generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Kullback-Leibler_Divergence>`
     - :doc:`QueryByCommittee </generated/api/skactiveml.pool.QueryByCommittee>`
     - pool classification single-annotator
     - :footcite:t:`seung1992query`, :footcite:t:`mccallum1998employing`
   * - :doc:`Query-by-Committee (QBC) with Vote Entropy </generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Vote_Entropy>`
     - :doc:`QueryByCommittee </generated/api/skactiveml.pool.QueryByCommittee>`
     - pool classification single-annotator
     - :footcite:t:`seung1992query`, :footcite:t:`engelson1996minimizing`
   * - :doc:`Query-by-Committee (QBC) with Variation Ratios </generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Variation_Ratios>`
     - :doc:`QueryByCommittee </generated/api/skactiveml.pool.QueryByCommittee>`
     - pool classification single-annotator
     - :footcite:t:`seung1992query`, :footcite:t:`beluch2018power`
   * - :doc:`Query-by-Committee (QBC) with Empirical Variance </generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Empirical_Variance>`
     - :doc:`QueryByCommittee </generated/api/skactiveml.pool.QueryByCommittee>`
     - pool regression single-annotator
     - :footcite:t:`seung1992query`, :footcite:t:`burbidge2007active`

Random Sampling
~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Random Sampling </generated/sphinx_gallery_examples/pool/plot-RandomSampling-Random_Sampling>`
     - :doc:`RandomSampling </generated/api/skactiveml.pool.RandomSampling>`
     - pool regression classification single-annotator
     - 

Uncertainty Sampling
~~~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Clustering Uncertainty-weighted Embeddings (CLUE) </generated/sphinx_gallery_examples/pool/plot-Clue-Clustering_Uncertainty-weighted_Embeddings_(CLUE)>`
     - :doc:`Clue </generated/api/skactiveml.pool.Clue>`
     - pool classification single-annotator
     - :footcite:t:`prabhu2021active`
   * - :doc:`Contrastive Active Learning (CAL) </generated/sphinx_gallery_examples/pool/plot-ContrastiveAL-Contrastive_Active_Learning_(CAL)>`
     - :doc:`ContrastiveAL </generated/api/skactiveml.pool.ContrastiveAL>`
     - pool classification single-annotator
     - :footcite:t:`margatina2021active`
   * - :doc:`Epistemic Uncertainty Sampling </generated/sphinx_gallery_examples/pool/plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling>`
     - :doc:`EpistemicUncertaintySampling </generated/api/skactiveml.pool.EpistemicUncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`nguyen2019epistemic`
   * - :doc:`Density-Diversity-Distribution-Distance Sampling (4DS) </generated/sphinx_gallery_examples/pool/plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS)>`
     - :doc:`FourDs </generated/api/skactiveml.pool.FourDs>`
     - pool classification single-annotator
     - :footcite:t:`reitmaier2013let`
   * - :doc:`Batch Density-Diversity-Distribution-Distance Sampling (Batch4DS) </generated/sphinx_gallery_examples/pool/plot-FourDs-Batch_Density-Diversity-Distribution-Distance_Sampling_(Batch4DS)>`
     - :doc:`FourDs </generated/api/skactiveml.pool.FourDs>`
     - pool classification single-annotator
     - :footcite:t:`reitmaier2013let`
   * - :doc:`Uncertainty Sampling with Margin </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Margin>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`settles2009active`
   * - :doc:`Uncertainty Sampling with Least-Confidence </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`settles2009active`
   * - :doc:`Uncertainty Sampling with Entropy </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`settles2009active`
   * - :doc:`Expected Average Precision </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Expected_Average_Precision>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`wang2018uncertainty`
   * - :doc:`Density-weighted Uncertainty Sampling </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Density-weighted_Uncertainty_Sampling>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`donmez2007dual`, :footcite:t:`nguyen2004active`
   * - :doc:`Dual strategy for Active Learning </generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Dual_strategy_for_Active_Learning>`
     - :doc:`UncertaintySampling </generated/api/skactiveml.pool.UncertaintySampling>`
     - pool classification single-annotator
     - :footcite:t:`donmez2007dual`, :footcite:t:`nguyen2004active`

Others
~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Batch Active Learning by Diverse Gradient Embedding (BADGE) </generated/sphinx_gallery_examples/pool/plot-Badge-Batch_Active_Learning_by_Diverse_Gradient_Embedding_(BADGE)>`
     - :doc:`Badge </generated/api/skactiveml.pool.Badge>`
     - pool classification single-annotator
     - :footcite:t:`ash2020deep`
   * - :doc:`Core Set </generated/sphinx_gallery_examples/pool/plot-CoreSet-Core_Set>`
     - :doc:`CoreSet </generated/api/skactiveml.pool.CoreSet>`
     - pool regression classification single-annotator
     - :footcite:t:`sener2017active`
   * - :doc:`Active Learning with Cost Embedding (ALCE) </generated/sphinx_gallery_examples/pool/plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE)>`
     - :doc:`CostEmbeddingAL </generated/api/skactiveml.pool.CostEmbeddingAL>`
     - pool classification single-annotator
     - :footcite:t:`huang2016novel`
   * - :doc:`Discriminative Active Learning (DAL) </generated/sphinx_gallery_examples/pool/plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL)>`
     - :doc:`DiscriminativeAL </generated/api/skactiveml.pool.DiscriminativeAL>`
     - pool classification regression single-annotator
     - :footcite:t:`gissin2019discriminative`
   * - :doc:`Greedy Sampling on the Target Space (GSy) </generated/sphinx_gallery_examples/pool/plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy)>`
     - :doc:`GreedySamplingTarget </generated/api/skactiveml.pool.GreedySamplingTarget>`
     - pool regression single-annotator
     - :footcite:t:`wu2019active`
   * - :doc:`Improved Greedy Sampling (GSi) </generated/sphinx_gallery_examples/pool/plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi)>`
     - :doc:`GreedySamplingTarget </generated/api/skactiveml.pool.GreedySamplingTarget>`
     - pool regression single-annotator
     - :footcite:t:`wu2019active`
   * - :doc:`Greedy Sampling on the Feature Space (GSx) </generated/sphinx_gallery_examples/pool/plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx)>`
     - :doc:`GreedySamplingX </generated/api/skactiveml.pool.GreedySamplingX>`
     - pool regression classification single-annotator
     - :footcite:t:`wu2019active`
   * - :doc:`Probability Coverage (ProbCover) </generated/sphinx_gallery_examples/pool/plot-ProbCover-Probability_Coverage_(ProbCover)>`
     - :doc:`ProbCover </generated/api/skactiveml.pool.ProbCover>`
     - pool classification single-annotator
     - :footcite:t:`yehuda2022active`
   * - :doc:`Multi-class Probabilistic Active Learning (McPAL) </generated/sphinx_gallery_examples/pool/plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL)>`
     - :doc:`ProbabilisticAL </generated/api/skactiveml.pool.ProbabilisticAL>`
     - pool classification single-annotator
     - :footcite:t:`kottke2016multi`
   * - :doc:`Querying Informative and Representative Examples (QUIRE) </generated/sphinx_gallery_examples/pool/plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE)>`
     - :doc:`Quire </generated/api/skactiveml.pool.Quire>`
     - pool classification single-annotator
     - :footcite:t:`huang2010active`
   * - :doc:`Regression Tree Based Active Learning (RT-AL) with Random Selection </generated/sphinx_gallery_examples/pool/plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Random_Selection>`
     - :doc:`RegressionTreeBasedAL </generated/api/skactiveml.pool.RegressionTreeBasedAL>`
     - pool regression single-annotator
     - :footcite:t:`jose2023regression`
   * - :doc:`Regression Tree Based Active Learning (RT-AL) with Diversity Selection </generated/sphinx_gallery_examples/pool/plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Diversity_Selection>`
     - :doc:`RegressionTreeBasedAL </generated/api/skactiveml.pool.RegressionTreeBasedAL>`
     - pool regression single-annotator
     - :footcite:t:`jose2023regression`
   * - :doc:`Regression Tree Based Active Learning (RT-AL) with Representativity Selection </generated/sphinx_gallery_examples/pool/plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Representativity_Selection>`
     - :doc:`RegressionTreeBasedAL </generated/api/skactiveml.pool.RegressionTreeBasedAL>`
     - pool regression single-annotator
     - :footcite:t:`jose2023regression`
   * - :doc:`Typical Clustering (TypiClust) </generated/sphinx_gallery_examples/pool/plot-TypiClust-Typical_Clustering_(TypiClust)>`
     - :doc:`TypiClust </generated/api/skactiveml.pool.TypiClust>`
     - pool regression classification single-annotator
     - :footcite:t:`hacohen2022active`


Stream
------

Density Sampling
~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Cognitive Dual-Query Strategy with Fixed-Uncertainty </generated/sphinx_gallery_examples/stream/plot-CognitiveDualQueryStrategyFixUn-Cognitive_Dual-Query_Strategy_with_Fixed-Uncertainty>`
     - :doc:`CognitiveDualQueryStrategyFixUn </generated/api/skactiveml.stream.CognitiveDualQueryStrategyFixUn>`
     - stream classification single-annotator
     - :footcite:t:`liu2023active`
   * - :doc:`Cognitive Dual-Query Strategy with Random Sampling </generated/sphinx_gallery_examples/stream/plot-CognitiveDualQueryStrategyRan-Cognitive_Dual-Query_Strategy_with_Random_Sampling>`
     - :doc:`CognitiveDualQueryStrategyRan </generated/api/skactiveml.stream.CognitiveDualQueryStrategyRan>`
     - stream classification single-annotator
     - :footcite:t:`liu2023active`
   * - :doc:`Cognitive Dual-Query Strategy with Randomized-Variable-Uncertainty </generated/sphinx_gallery_examples/stream/plot-CognitiveDualQueryStrategyRanVarUn-Cognitive_Dual-Query_Strategy_with_Randomized-Variable-Uncertainty>`
     - :doc:`CognitiveDualQueryStrategyRanVarUn </generated/api/skactiveml.stream.CognitiveDualQueryStrategyRanVarUn>`
     - stream classification single-annotator
     - :footcite:t:`liu2023active`
   * - :doc:`Cognitive Dual-Query Strategy with Variable-Uncertainty </generated/sphinx_gallery_examples/stream/plot-CognitiveDualQueryStrategyVarUn-Cognitive_Dual-Query_Strategy_with_Variable-Uncertainty>`
     - :doc:`CognitiveDualQueryStrategyVarUn </generated/api/skactiveml.stream.CognitiveDualQueryStrategyVarUn>`
     - stream classification single-annotator
     - :footcite:t:`liu2023active`
   * - :doc:`Density Based Active Learning for Data Streams </generated/sphinx_gallery_examples/stream/plot-StreamDensityBasedAL-Density_Based_Active_Learning_for_Data_Streams>`
     - :doc:`StreamDensityBasedAL </generated/api/skactiveml.stream.StreamDensityBasedAL>`
     - stream classification single-annotator
     - :footcite:t:`ienco2014density`

Probalistic Sampling
~~~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Probabilistic Active Learning in Datastreams </generated/sphinx_gallery_examples/stream/plot-StreamProbabilisticAL-Probabilistic_Active_Learning_in_Datastreams>`
     - :doc:`StreamProbabilisticAL </generated/api/skactiveml.stream.StreamProbabilisticAL>`
     - stream classification single-annotator
     - :footcite:t:`kottke2015probalistic`

Random Sampling
~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Periodic Sampling </generated/sphinx_gallery_examples/stream/plot-PeriodicSampling-Periodic_Sampling>`
     - :doc:`PeriodicSampling </generated/api/skactiveml.stream.PeriodicSampling>`
     - stream classification single-annotator
     - 
   * - :doc:`Stream Random Sampling </generated/sphinx_gallery_examples/stream/plot-StreamRandomSampling-Stream_Random_Sampling>`
     - :doc:`StreamRandomSampling </generated/api/skactiveml.stream.StreamRandomSampling>`
     - stream classification single-annotator
     - 

Uncertainty Sampling
~~~~~~~~~~~~~~~~~~~~
.. list-table:: 
   :header-rows: 1

   * - Method
     - Base Class
     - Tags
     - Reference
   * - :doc:`Fixed-Uncertainty </generated/sphinx_gallery_examples/stream/plot-FixedUncertainty-Fixed-Uncertainty>`
     - :doc:`FixedUncertainty </generated/api/skactiveml.stream.FixedUncertainty>`
     - stream classification single-annotator
     - :footcite:t:`zliobaite2014active`
   * - :doc:`Randomized-Variable-Uncertainty </generated/sphinx_gallery_examples/stream/plot-RandomVariableUncertainty-Randomized-Variable-Uncertainty>`
     - :doc:`RandomVariableUncertainty </generated/api/skactiveml.stream.RandomVariableUncertainty>`
     - stream classification single-annotator
     - :footcite:t:`zliobaite2014active`
   * - :doc:`Split </generated/sphinx_gallery_examples/stream/plot-Split-Split>`
     - :doc:`Split </generated/api/skactiveml.stream.Split>`
     - stream classification single-annotator
     - :footcite:t:`zliobaite2014active`
   * - :doc:`Variable-Uncertainty </generated/sphinx_gallery_examples/stream/plot-VariableUncertainty-Variable-Uncertainty>`
     - :doc:`VariableUncertainty </generated/api/skactiveml.stream.VariableUncertainty>`
     - stream classification single-annotator
     - :footcite:t:`zliobaite2014active`


References
----------
.. footbibliography::
